move redundant requirements.txt and run initial local test

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,11 +19,11 @@ RUN apt-get update \
         curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements first for better caching
-COPY requirements.txt .
+# Copy pyproject.toml first for better caching
+COPY pyproject.toml .
 
-# Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+# Install Python dependencies (production only)
+RUN pip install --no-cache-dir -e .
 
 # Copy application code
 COPY . .
