--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -5,70 +5,25 @@ services:
       - "8000:8000"
     environment:
       - DATABASE_URL=sqlite+aiosqlite:///./moneyinone.db
-      # - DATABASE_URL=postgresql+asyncpg://moneyinone:password@db:5432/moneyinone
-      # - REDIS_URL=redis://redis:6379/0
+      - REDIS_URL=redis://redis:6379/0
       - DEBUG=True      
-    # depends_on:
-    #   - db
-    #   - redis
+    depends_on:
+      - redis
     volumes:
       - .:/app
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
-
-  # db:
-  #   image: postgres:15-alpine
-  #   environment:
-  #     - POSTGRES_DB=moneyinone
-  #     - POSTGRES_USER=moneyinone
-  #     - POSTGRES_PASSWORD=password
-  #   ports:
-  #     - "5432:5432"
-  #   volumes:
-  #     - postgres_data:/var/lib/postgresql/data
-  #     - ./scripts/init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
-  #   healthcheck:
-  #     test: ["CMD-SHELL", "pg_isready -U moneyinone -d moneyinone"]
-  #     interval: 10s
-  #     timeout: 5s
-  #     retries: 5
-
-  # redis:
-  #   image: redis:7-alpine
-  #   ports:
-  #     - "6379:6379"
-  #   volumes:
-  #     - redis_data:/data
-  #   healthcheck:
-  #     test: ["CMD", "redis-cli", "ping"]
-  #     interval: 10s
-  #     timeout: 5s
-  #     retries: 3
-
-  # worker:
-  #   build: .
-  #   command: celery -A app.tasks.celery_app worker --loglevel=info
-  #   environment:
-  #     - DATABASE_URL=postgresql://moneyinone:password@db:5432/moneyinone
-  #     - REDIS_URL=redis://redis:6379/0
-  #   depends_on:
-  #     - redis
-  #     - db
-  #   volumes:
-  #     - .:/app
-
-  # beat:
-  #   build: .
-  #   command: celery -A app.tasks.celery_app beat --loglevel=info
-  #   environment:
-  #     - DATABASE_URL=postgresql://moneyinone:password@db:5432/moneyinone
-  #     - REDIS_URL=redis://redis:6379/0
-  #   depends_on:
-  #     - redis
-  #     - db
-  #   volumes:
-  #     - .:/app
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
 volumes:
-  # postgres_data:
-  # redis_data:
+  redis_data:
   sqlite_data:
