--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
     "aiosqlite>=0.21.0",
+    "aiohttp>=3.9.0",
+    "redis>=5.0.1"
 ]
 
 [project.optional-dependencies]
