further UI enhancement, fix bugging, added app icon

--- a/backend/env.example
+++ b/backend/env.example
@@ -11,11 +11,9 @@ DATABASE_MAX_OVERFLOW=30
 # Redis Settings
 REDIS_URL=redis://localhost:6379/0
 
-# External API Keys (optional - leave empty for development)
-YAHOO_FINANCE_API_KEY=
-ALPHA_VANTAGE_API_KEY=
-EXCHANGE_RATE_API_KEY=
-COINGECKO_API_KEY=
+# External API Keys
+# Get your free Alpha Vantage API key at: https://www.alphavantage.co/support/#api-key
+ALPHA_VANTAGE_API_KEY=JJZ0GGL8ZMCGIME9 # 25 requests per day
 
 # Security Settings
 ALLOWED_HOSTS=["localhost", "127.0.0.1", "0.0.0.0"]
