--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -37,11 +37,8 @@ USER moneyinone
 EXPOSE 8000
 
 # Health check
-# HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-#     CMD curl -f http://localhost:8000/health || exit 1
-
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD curl -f http://192.168.1.2:8000/health || exit 1
+    CMD curl -f http://localhost:8000/health || exit 1
 
 # Run the application
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
