--- a/frontend/MoneyInOne/MoneyInOne/Info.plist
+++ b/frontend/MoneyInOne/MoneyInOne/Info.plist
@@ -8,6 +8,14 @@
 		<true/>
 		<key>NSAllowsArbitraryLoadsInWebContent</key>
 		<false/>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>moneyinone-api.onrender.com</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+			</dict>
+		</dict>
 	</dict>
 </dict>
 </plist>
