--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,10 +3,8 @@ services:
     build: .
     ports:
       - "8000:8000"
-    environment:
-      - DATABASE_URL=sqlite+aiosqlite:///./moneyinone.db
-      - REDIS_URL=redis://redis:6379/0
-      - DEBUG=True      
+    env_file:
+      - .env  # Load from .env
     depends_on:
       - redis
     volumes:
@@ -26,4 +24,3 @@ services:
 
 volumes:
   redis_data:
-  sqlite_data:
